<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">keepsafe</string>

    <string name="pleasewait">Please wait</string>
    <string name="processing">Processing</string>
    
    <string name="store">Store secret</string>
    <string name="get">Get secret</string>
    <string name="hide">Hide secret</string>
    <string name="add">Add a secret</string>
    <string name="delete">Delete</string>
    
    <string name="addsecretname">Enter name</string>
    <string name="addsecretvalue">Enter secret</string>
    <string name="enterpassword">Enter password</string>
    
    <string name="failed">Failed. Please restart.</string>
    <string name="error">Error</string>
    <string name="restart">Restart</string>
    <string name="notsupported">The required algorithms are not supported on this device.</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>

    <string name="preferences">Preferences</string>
    <string name="selftest">Self test</string>
    <string name="about">About</string>
    <string name="exprt">Export</string>
    <string name="imprt">Import</string>
    
    <array name="crypto">
	    <item>Java</item>
	    <item>Native (PolarSSL)</item>
    </array>
    
</resources>