<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/listsecretsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Button
            android:id="@+id/buttonAddSecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lock_add"
            android:text="@string/add" />
        

        <ListView
            android:id="@+id/listSecrets"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addsecretLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addsecretname" />

        <EditText
            android:id="@+id/secretname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

        </EditText>
        
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addsecretvalue" />

        <EditText
            android:id="@+id/secretvalue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

        </EditText>
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpassword" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        
        <Button
            android:id="@+id/buttonStoreSecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lock_add"
            android:text="@string/store" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enterpwLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/name"
			android:textAppearance="?android:attr/textAppearanceLarge"            
            android:drawableLeft="@drawable/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterpassword" />

        <EditText
            android:id="@+id/enterpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
        
        <Button
            android:id="@+id/buttonGetSecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lock_open"
            android:text="@string/get" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/showsecretLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/showSecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"            
            android:drawableLeft="@drawable/lock_open"
            android:text="" >
            
        </TextView>
	        
        <Button
            android:id="@+id/buttonHideSecret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lock_go"
            android:text="@string/hide" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/failedLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/lock_break"
			android:textAppearance="?android:attr/textAppearanceLarge"            
            android:text="@string/failed" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart" />

        </LinearLayout>

</FrameLayout>
